--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,7 +87,7 @@ android {
     buildToolsVersion "25.0.3"
 
     defaultConfig {
-        applicationId "co.edgesecure.wallet"
+        applicationId "co.agld.wallet"
         minSdkVersion 23
         targetSdkVersion 25
         versionCode 21000000
@@ -142,10 +142,8 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-mail')
-    compile project(':react-native-smart-splash-screen')
-    compile project(':react-native-background-task')
     compile project(':react-native-picker')
+    compile project(':react-native-smart-splashscreen')
     compile project(':airbitz-core-js-ui')
     compile project(':react-native-sound')
     compile project(':react-native-share')
